Update external links to use rel="noopener noreferrer" for security
- Change rel="noopener" to rel="noopener noreferrer" on all external links
- Prevents reverse tabnabbing security vulnerability
- Suppresses referrer information for better privacy
- Applies to Poetry, Cookiecutter, LICENSE, and GitHub links

--- a/website/public/index.html
+++ b/website/public/index.html
@@ -364,8 +364,8 @@
                 <h2>System Requirements</h2>
                 <ul>
                     <li>Python 3.10 or higher</li>
-                    <li><a href="https://python-poetry.org/" target="_blank" rel="noopener">Poetry 2.2.1</a> - Python dependency management tool</li>
-                    <li><a href="https://github.com/cookiecutter/cookiecutter" target="_blank" rel="noopener">Cookiecutter</a> - Project templating tool</li>
+                    <li><a href="https://python-poetry.org/" target="_blank" rel="noopener noreferrer">Poetry 2.2.1</a> - Python dependency management tool</li>
+                    <li><a href="https://github.com/cookiecutter/cookiecutter" target="_blank" rel="noopener noreferrer">Cookiecutter</a> - Project templating tool</li>
                     <li>Docker - For containerization</li>
                     <li>GNU Make - For running build commands</li>
                 </ul>
@@ -464,13 +464,13 @@ make docker-compose-down</code></pre>
             
             <section>
                 <h2>License</h2>
-                <p>This project is licensed under the MIT License. See the <a href="https://github.com/klee1611/cookiecutter-fastapi-mongo/blob/main/LICENSE" target="_blank" rel="noopener">LICENSE</a> file for details.</p>
+                <p>This project is licensed under the MIT License. See the <a href="https://github.com/klee1611/cookiecutter-fastapi-mongo/blob/main/LICENSE" target="_blank" rel="noopener noreferrer">LICENSE</a> file for details.</p>
             </section>
         </div>
         
         <footer>
-            <p>Created and maintained by <a href="https://github.com/klee1611" target="_blank" rel="noopener">klee1611</a></p>
-            <p style="margin-top: 0.75rem;">⭐ Star this project on <a href="https://github.com/klee1611/cookiecutter-fastapi-mongo" target="_blank" rel="noopener">GitHub</a> if you find it useful</p>
+            <p>Created and maintained by <a href="https://github.com/klee1611" target="_blank" rel="noopener noreferrer">klee1611</a></p>
+            <p style="margin-top: 0.75rem;">⭐ Star this project on <a href="https://github.com/klee1611/cookiecutter-fastapi-mongo" target="_blank" rel="noopener noreferrer">GitHub</a> if you find it useful</p>
         </footer>
     </div>
 </body>
